# mr_gunking_user_system_spec

./: .dockerignore  .env.example  .env.production.example  .env.production.template  .gitignore  ANALYZE_FIXES_SUMMARY.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  HOW_TO_TEST.md  IMPLEMENTATION_COMPLETION_REPORT.md  LOCAL_DEPLOYMENT.md  PHASE_13_COMPLETION_REPORT.md  PHASE_13_DEPLOYMENT_TESTING_REPORT.md  PRODUCTION-DEPLOYMENT.md  README.md  TEST_ENVIRONMENT_READY.md  backup_db.sh  check_prod_data.py  deploy.sh  deploy_offline.sh  deploy_production.sh  deploy_production_fixed.sh  deploy_production_nongit.sh  docker-compose.monitoring.yml  docker-compose.postgres.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.redis.yml  docker-compose.yml  fix_test_data.py  install_python313_manual.sh  install_python313_offline.sh  recover_db_password.sh  reset_and_start_services.sh  start-local.bat  start_services_direct.sh  stop-local.bat  tasks.md  (+9 more)
backend/: .black  .dockerignore  .env.development  .env.example  .env.production  .gitignore  .ruff.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  PERFORMANCE_OPTIMIZATION.md  TESTING.md  TEST_GUIDE.md  check_finance_user.py  check_key_length.py  coverage.xml  create_admin_simple_v2.py  create_finance_in_postgres.py  create_finance_user.py  create_test_operator.py  direct_db_check.py  finance_login_test.py  fix_finance_password.py  fix_test_fixtures.py  init_data.py  init_database.py  init_db_and_accounts.py  mypy.ini  pyproject.toml  pytest.ini  requirements.stable.txt  requirements.txt  run_tests.bat  simple_check.py  simple_test.py  (+12 more)
(+598 files in other folders)
